# sdk-trusted-firmware-m

./: CMakeLists.txt  Kconfig  README.rst  init-git.sh  pyproject.toml  toolchain_GNUARM.cmake
.github/: test-spec.yml
bl2/: CMakeLists.txt
bl2/ext/mcuboot/: CMakeLists.txt  keys.c
bl2/ext/mcuboot/scripts/: wrapper.py
cmake/: hex_generator.cmake  install.cmake  remote_library.cmake  spe-CMakeLists.cmake  version.cmake
config/: check_config.cmake  config_base.cmake  config_default.cmake
config/profile/: config_profile_medium.h  config_profile_medium_arotless.h  config_profile_small.h
docs/: conf.py
docs/building/: tfm_build_instruction.rst  tfm_build_instruction_iar.rst
docs/configuration/: test_configuration.rst
docs/configuration/profiles/: index.rst  tfm_profile_large.rst  tfm_profile_medium.rst  tfm_profile_small.rst
docs/design_docs/: nordic_eits.rst  tfm_builtin_keys.rst  tfm_physical_attack_mitigation.rst
docs/design_docs/booting/: tfm_secure_boot.rst
docs/design_docs/services/: tfm_crypto_design.rst
docs/getting_started/: tfm_getting_started.rst
docs/integration_guide/services/: tfm_attestation_integration_guide.rst  tfm_crypto_integration_guide.rst
docs/integration_guide/source_structure/: platform_ext_folder.rst
docs/introduction/: readme.rst
docs/platform/nordic_nrf/nrf5340dk_nrf5340_cpuapp/: README.rst
docs/releases/: 2.3.0.rst  index.rst
docs/security/: index.rst  security_recommendations.rst
interface/: CMakeLists.txt
interface/include/: tfm_crypto_defs.h  tfm_platform_api.h
interface/include/psa/: crypto.h  crypto_extra.h  crypto_platform.h  crypto_sizes.h  crypto_struct.h  crypto_types.h  crypto_values.h
interface/src/: tfm_crypto_api.c  tfm_crypto_func_api.c  tfm_crypto_ipc_api.c  tfm_platform_api.c
lib/ext/: CMakeLists.txt
lib/ext/qcbor/: CMakeLists.txt
lib/ext/t_cose/: tfm_t_cose.cmake
lib/ext/t_cose/crypto_adapters/: t_cose_psa_crypto.c
lib/ext/t_cose/src/: t_cose_crypto.h  t_cose_sign1_sign.c
lib/ext/t_cose/test/: t_cose_make_test_messages.c
lib/ext/tf-m-tests/: version.txt
lib/ext/tf-psa-crypto/: 0001-Add-generated-files-to-the-source-tree.patch  0002-Add-TF-M-Builtin-Key-Loader-driver-entry-points.patch  0003-Enable-crypto-code-sharing-between-independent-binar.patch  0004-Initialise-driver-wrappers-as-first-step-in-psa_cryp.patch  0005-Hardcode-CC3XX-entry-points.patch  0006-P256M-Add-option-to-force-not-use-of-asm.patch  0007-psa-mac-only-call-memset-if-key_length-is-less-than-.patch  0008-Add-CC3XX-Opaque-Key-entry-points.patch  0009-Define-base-attributes-and-structure-for-SP800-108-C.patch  0010-Add-experimental-LMS-support-as-a-vendor-extension.patch  0011-Exclude-built-in-definitions-for-PSA-Crypto-client.patch  0012-Re-add-psa_can_do_cipher-to-public-interface.patch  0013-Implement-SP800-108-Counter-CMAC-key-derivation-in-P.patch  0014-Support-use-of-cc3xx-opaque-keys-in-PSA-Crypto-core.patch  0015-Re-add-support-for-AES-Keywrap-for-TF-M.patch  0016-Do-not-define-__STDC_WANT_LIB_EXT1__-with-ATfE.patch  0017-include-tf_psa_crypto_platform_requirements.h-in-tf_.patch
lib/ext/thin-psa-crypto-core/: thin_psa_crypto_core.c
platform/: CMakeLists.txt
platform/ext/accelerator/: CMakeLists.txt
platform/ext/common/: exception_info.c  faults.c  mpc_ppc_faults.c
platform/ext/common/atfe/: tfm_common_ns.ldc  tfm_isolation_s.ld.template
platform/ext/common/gcc/: tfm_common_bl2.ld  tfm_common_ns.ld  tfm_common_s.ld  tfm_common_s.ld.template  tfm_isolation_s.ld.template
platform/ext/common/template/: tfm_hal_its_encryption.c
platform/include/: exception_info.h  tfm_attest_hal.h  tfm_hal_its.h  tfm_hal_platform.h  tfm_plat_crypto_keys.h  tfm_plat_provisioning.h  tfm_platform_system.h
platform/ns/: toolchain_ns_GNUARM.cmake
secure_fw/: CMakeLists.txt
secure_fw/partitions/crypto/: CMakeLists.txt  Kconfig.comp  config_crypto.h  config_crypto_check.h  crypto_aead.c  crypto_alloc.c  crypto_check_config.h  crypto_cipher.c  crypto_hash.c  crypto_init.c  crypto_key_derivation.c  crypto_key_management.c  crypto_key_wrapping.c  crypto_library.c  crypto_mac.c  crypto_pake.c  crypto_spe.h  tfm_crypto.yaml  tfm_crypto_api.h  tfm_crypto_secure_api.c
secure_fw/partitions/crypto/psa_driver_api/: tfm_builtin_key_loader.c
secure_fw/partitions/initial_attestation/: Kconfig  attest_core.c  attest_token_encode.c
secure_fw/partitions/internal_trusted_storage/: CMakeLists.txt  config_its.h  its_crypto_interface.c  its_crypto_interface.h  tfm_internal_trusted_storage.c  tfm_internal_trusted_storage.h  tfm_its_req_mngr.c
secure_fw/partitions/internal_trusted_storage/flash_fs/: its_flash_fs.c  its_flash_fs.h  its_flash_fs_mblock.h
secure_fw/partitions/lib/runtime/: CMakeLists.txt  assert.c  crt_start.c  psa_api_ipc.c
secure_fw/partitions/ns_agent_mailbox/: tfm_spe_mailbox.c
secure_fw/partitions/platform/: CMakeLists.txt  platform_sp.c
secure_fw/partitions/protected_storage/: CMakeLists.txt  ps_object_system.c  ps_utils.c  ps_utils.h
secure_fw/partitions/protected_storage/crypto/: ps_crypto_interface.c  ps_crypto_interface.h
secure_fw/spm/: CMakeLists.txt
secure_fw/spm/cmsis_func/: main.c  spm_func.c  tfm_core_svcalls_func.c
secure_fw/spm/cmsis_psa/: tfm_core_svcalls_ipc.c
secure_fw/spm/cmsis_psa/arch/: tfm_arch_v6m_v7m.c  tfm_arch_v8m_base.c  tfm_arch_v8m_main.c
secure_fw/spm/core/: main.c  spm_ipc.c  tfm_svcalls.c
secure_fw/spm/core/arch/: tfm_arch_v8m_main.c
secure_fw/spm/ffm/: psa_api.c
tf-m-tests/app/: CMakeLists.txt  main_ns.c
tf-m-tests/test/: CMakeLists.txt
tf-m-tests/test/framework/: non_secure_suites.c  secure_suites.c
tf-m-tests/test/test_services/: CMakeLists.txt
tools/: CMakeLists.txt  tfm_generated_file_list.yaml  tfm_manifest_list.yaml  tfm_parse_manifest_list.py
tools/templates/: partition_intermedia.template  veneer_function_names.template
trusted-firmware-m/bl2/: CMakeLists.txt
trusted-firmware-m/config/: config_default.cmake
trusted-firmware-m/platform/include/: tfm_hal_its.h
trusted-firmware-m/secure_fw/: CMakeLists.txt
zephyr/: module.yml
(+30 files in other folders)
